fix spacing at serviços and justify texts

--- a/src/Pages/Resultados/Resultados.css
+++ b/src/Pages/Resultados/Resultados.css
@@ -91,6 +91,7 @@
 #resultados .container .texto{
     color: var(--azulEscuro);
     font-size: 1.5rem;
+    text-align: justify;
 }
 
 #resultados .btn-mais {
