--- a/src/Pages/Servicos/Servicos.css
+++ b/src/Pages/Servicos/Servicos.css
@@ -33,8 +33,8 @@
 #servicos .container .titulo p{
     color: var(--azulMarinho);
     font-size: 1.2rem;
-    line-height: 1;
     padding-top: 1rem;
+    text-align: justify;
 }
 #servicos .content{
     display: flex;
